<?xml version="1.0"?>
<package>
  <name>feature_extraction</name>
  <version>0.0.0</version>
  <description>The feature extraction package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="andreas.persson@oru.se">aspo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/object_tracking</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="anddreas.persson@oru.se">Andreas Persson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>anchor_msgs</build_depend>
  <build_depend>anchor_utils</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>anchor_msgs</run_depend>
  <run_depend>anchor_utils</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
