<?xml version="1.0"?>
<package>
  <name>feature_extraction</name>
  <version>0.0.0</version>
  <description>The feature extraction package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="andreas.persson@oru.se">aspo</maintainer>
  <license>MIT</license>

  <author email="anddreas.persson@oru.se">Andreas Persson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>anchor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>ml</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>anchor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>ml</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
