<?xml version="1.0"?>
<package>
  <name>ml</name>
  <version>0.0.1</version>
  <description>The anchoring machine learning package</description>
  <maintainer email="andreas.persson@oru.se">Andreas Persson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>database</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>anchor_msgs</build_depend>

  <run_depend>database</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>anchor_msgs</run_depend>

  <export>
  </export>
</package>
